SERVER-20754 Fixes to support building against system boost 1.59